fix(web): create-bet-required-mark too close to create-bet-field-label-with-icon and change "ОПИСАНИЕ" to "УСЛОВИЯ"

--- a/apps/web/src/components/CreateBetForm/CreateBetForm.css
+++ b/apps/web/src/components/CreateBetForm/CreateBetForm.css
@@ -71,7 +71,8 @@
 }
 
 .create-bet-field-label-with-icon .create-bet-required-mark {
-  margin-left: -4px;
+  margin-left: -2px;
+  margin-bottom: 4px;
 }
 
 .create-bet-ton-icon {
